--- a/the-lens.html
+++ b/the-lens.html
@@ -2824,7 +2824,7 @@
             politics: [
               { name: "Workplace Politics Map", type: "Framework", icon: "diagram-project", href: "map-political-landscape.html" },
               { name: "Stakeholder Mapping Grid", type: "Template", icon: "users", href: "map-stakeholder.html" },
-              { name: "Team Tension Heatmap", type: "Assessment", icon: "fire", href: "assessment-conflict-risk-radar.html" }
+              { name: "Team Tension Heatmap", type: "Assessment", icon: "fire", href: "map-team-tension.html" }
             ],
             hr: [
               { name: "Documentation Form", type: "Template", icon: "file-lines", href: "form-escalation-documentation.html" },
@@ -3281,3 +3281,4 @@
   </script>
 </body>
 </html>
+
