--- a/checklist-team-dysfunction.html
+++ b/checklist-team-dysfunction.html
@@ -2055,7 +2055,7 @@
                     <span class="quick-links-title">Quick links</span>
                 </div>
                 <div class="playbook-quick-links-list">
-                    <a href="dashboard.html" class="quick-link-pill">
+                    <a href="my-playbook.html" class="quick-link-pill">
                         <i class="fas fa-gauge"></i> The Dashboard
                     </a>                    
                     <a href="the-lens.html" class="quick-link-pill">
@@ -2957,3 +2957,4 @@ console.log('Team Dysfunction Checklist script loaded');
 <script src="assets/accessControl.js"></script>
 </body>
 </html>
+
