--- a/checklist-boundary-strength.html
+++ b/checklist-boundary-strength.html
@@ -1523,6 +1523,11 @@
             color: var(--accent-purple);
         }
 
+        .print-header {
+            display: none;
+        }
+
+
         /* ===========================
        HARD LOCK OVERLAY (behind sign-in)
     =========================== */
