--- a/checklist-boundary-strength.html
+++ b/checklist-boundary-strength.html
@@ -1,4 +1,3 @@
-
 <!-- ✅ FINAL: Boundary Strength Checklist (Phase 1 Launch-Ready, Single File)
      ✅ Includes Phase 1 essentials aligned to your Capacity Checklist standard:
      (1) TRUE HARD LOCK behind sign-in (inert on #toolMain + global event capture when locked)
@@ -2506,7 +2505,7 @@
             const anyChecked = checked.some(Boolean);
             generateBtn.disabled = !anyChecked || isLocked;
             clearBtn.disabled = !anyChecked || isLocked;
-            saveProgressBtn.disabled = !anyChecked || isLocked || isLocked;
+            saveProgressBtn.disabled = !anyChecked || isLocked;
             printBtn.disabled = isLocked; // allow print only when signed in (matches premium behaviour)
         }
 
@@ -3271,13 +3270,25 @@
         initPlaybook();
         initSaveStatus();
 
-        // FIRST attach gates
-        attachHardLockGates();
+        (async () => {
+            try {
+                // FIRST attach gates
+                attachHardLockGates();
 
-        // THEN load auth state
-        await refreshAuthUI();
+                // THEN load auth state
+                await refreshAuthUI();
 
-        body.classList.add("loaded");
+                // Restore progress ONLY if signed-in and unlocked
+                if (!isLocked) await restoreProgress();
+
+            } catch (e) {
+                console.error("Startup error:", e);
+            } finally {
+                // ALWAYS show page
+                body.classList.add("loaded");
+            }
+        })();
+
 
 
         // Keep header in sync
